--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,26 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 h1 {
-  color: blue;
+  color: #38598b;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 10px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
