--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,34 @@ h1 {
 ul {
   margin: 0;
   padding: 0;
+  color: gray;
 }
 li {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.weather-app-wrap {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+  float: left;
+}
+
+.weather-temperature strong {
+  font-size: 40px;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -32px;
 }
