--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, "Lucida Sans", Arial, sans-serif;
+  background: radial-gradient(
+    592px at 48.2% 50%,
+    rgba(255, 255, 249, 0.6) 0%,
+    rgb(160, 199, 254) 74.6%
+  );
 }
 h1 {
   color: #38598b;
@@ -11,7 +16,7 @@ h1 {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #dadde1;
+  border: 1px solid #3d3e41;
   border-radius: 10px;
 }
 
@@ -52,4 +57,12 @@ li:first-letter {
   position: relative;
   font-size: 16px;
   top: -32px;
+}
+
+.weather-temperature.active {
+  color: gray;
+  cursor: default;
+}
+.weather-temperature.active:hover {
+  text-decoration: none;
 }
