--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,20 @@ li:first-letter {
 .weather-temperature.active:hover {
   text-decoration: none;
 }
+
+.weather-forcast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forcast-cate {
+  font-size: 14px;
+  color: #000;
+}
+.weather-forcast-temperatures {
+  font-size: 13px;
+}
+
+.weather-forcast-temperature-min {
+  color: gray;
+}
