--- a/src/style.css
+++ b/src/style.css
@@ -67,19 +67,19 @@ li:first-letter {
   text-decoration: none;
 }
 
-.weather-forcast {
+.weather-forecast {
   margin-top: 20px;
   text-align: center;
 }
 
-.weather-forcast-cate {
+.weather-forecast-cate {
   font-size: 14px;
   color: #000;
 }
-.weather-forcast-temperatures {
+.weather-forecast-temperatures {
   font-size: 13px;
 }
 
-.weather-forcast-temperature-min {
+.weather-forecast-temperature-min {
   color: gray;
 }
