--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,25 @@
 body {
   font-family: Arial, Helvetica, sans-serif, "Lucida Sans", Arial, sans-serif;
   background: radial-gradient(
-    592px at 48.2% 50%,
-    rgba(255, 255, 249, 0.6) 0%,
-    rgb(160, 199, 254) 74.6%
+    circle at 10% 20%,
+    rgb(239, 246, 249) 0%,
+    rgb(206, 239, 253) 90%
   );
 }
 h1 {
   color: #38598b;
+  font-family: "Bad Script", cursive;
+  font-size: 50px;
   margin: 0 auto;
+  font-weight: lighter;
   text-align: center;
+  padding: 20px;
 }
 
 .container {
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   border: 1px solid #3d3e41;
   border-radius: 10px;
 }
