--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ h1 {
   font-family: "Bad Script", cursive;
   font-size: 50px;
   margin: 0 auto;
-  font-weight: lighter;
+  font-weight: bold;
   text-align: center;
   padding: 20px;
 }
@@ -86,4 +86,9 @@ li:first-letter {
 
 .weather-forecast-temperature-min {
   color: gray;
+}
+
+p {
+  margin: 0 auto;
+  text-align: center;
 }
